fix list name category